--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 
 <body>
 
-    <header class="container-fluid bg-header">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </header>
-    <main></main>
+    <div id="app">
+        <header class="container-fluid bg-header">
+            <div class="row">
+                <div class="col text-center">
+                    <img src="./img/logo.png" alt="Logo">
+                </div>
+            </div>
+        </header>
+        <main></main>
+    </div>
+
 
 
 
