--- a/index.html
+++ b/index.html
@@ -18,18 +18,26 @@
 <body>
 
     <div id="app">
-        <header class="container-fluid bg-header">
+        <header class="container-fluid bg-header mb-5">
             <div class="row">
                 <div class="col text-center">
                     <img src="./img/logo.png" alt="Logo">
                 </div>
             </div>
         </header>
-        <main></main>
+        <main class="container">
+            <div class="row">
+                <div class="col-6 mx-auto border border-3 border-info shadow">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between">
+                            Cose da fare
+                            <button type="button" class="btn-close" aria-label="Close"></button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
     </div>
-
-
-
 
     <script src="./js/script.js"></script>
 </body>
