--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         <main class="container">
             <div class="row">
                 <div class="col-6 mx-auto border border-3 border-info shadow">
-                    <ul class="list-group">
+                    <h2 v-if="!list.length" class="text-center text-danger my-auto">La Lista è vuota!</h2>
+                    <ul v-else class="list-group">
                         <li v-for="(element, index) in list" class="list-group-item d-flex justify-content-between m-1">
                             {{ element }}
-                            <button type="button" class="btn-close" aria-label="Close"></button>
+                            <button type="button" @click="deleteList(index)" class="btn-close"
+                                aria-label="Close"></button>
                         </li>
                     </ul>
                 </div>
