--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main class="container">
             <div class="row flex-column">
-                <div class="input-group mb-3 w-50 mx-auto">
+                <div class="input-group m-3 w-50 mx-auto">
                     <input v-model="newItem" type="text" class="form-control" placeholder="Cose da aggiungere...">
                     <button @click="addList" class="btn btn-outline-success" type="button">Aggiungi</button>
                 </div>
