Add credits in footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                 </div>
             </div>
         </main>
+        <footer class="container">
+            <div class="row mt-5">
+                <div class="col-8 mx-auto text-center">
+                    <h1>Made by {{ author }}</h1>
+                    <p>Vue JS</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="./js/script.js"></script>
