--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
         </main>
         <footer class="container">
             <div class="row mt-5">
-                <div class="col-8 mx-auto text-center">
-                    <h1>Made by {{ author }}</h1>
-                    <p>Vue JS</p>
+                <div class="col-8 mx-auto text-center d-flex justify-content-center">
+                    <div class="box-icon m-3">
+                        <i class="fas fa-spinner fa-pulse"></i>
+                    </div>
+                    <div class="credit">
+                        <h1>Made by {{ author }}</h1>
+                        <p>Vue JS</p>
+                    </div>
+                    <div class="box-icon m-3">
+                        <i class="fas fa-spinner fa-pulse"></i>
+                    </div>
                 </div>
             </div>
         </footer>
