--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <h2 v-else-if="list.length === 10" class="text-center text-success m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
-                        <li v-for="(element, index) in list" class="list-group-item d-flex justify-content-between m-1">
-                            {{ element }}
-                            <button type="button" @click="deleteList(index)" class="btn-close"
-                                aria-label="Close"></button>
+                        <li v-for="(element, index) in list"
+                            class="m-3 list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between">
+                            <p class="my-auto">{{ element }}</p>
+                            <button id="btn" type="button" @click="deleteList(index)" class="btn-close"></button>
                         </li>
                     </ul>
                 </div>
@@ -52,8 +52,8 @@
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
                     <div class="credit">
-                        <h1>Made by {{ author }}</h1>
-                        <p>Vue JS</p>
+                        <h1 class="font-monospace">Made by {{ author }}</h1>
+                        <p class="font-monospace">Vue JS</p>
                     </div>
                     <div class="box-icon m-3">
                         <i class="fas fa-spinner fa-pulse"></i>
