--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
         </header>
         <main class="container">
             <div class="row flex-column">
-                <div class="input-group m-3 w-50 mx-auto">
-                    <input v-model="newItem" type="text" class="form-control" placeholder="Cose da aggiungere...">
-                    <button @click="addList" class="btn btn-outline-success" type="button">Aggiungi</button>
+                <div class="col-4 d-flex flex-column col-md-6 input-group m-3 w-50 mx-auto">
+                    <input v-model="newItem" type="text" class="form-control w-100 m-2"
+                        placeholder="Cose da aggiungere...">
+                    <button @click="addList" class="mx-auto btn btn-outline-success w-50"
+                        type="button">Aggiungi</button>
                 </div>
-                <div class="col-6 mx-auto border border-2 border-info shadow p-5">
+                <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-5">
                     <h2 v-if="!list.length" class="text-center text-danger my-auto">La Lista è vuota!</h2>
                     <h2 v-else-if="list.length === 10" class="text-center text-success m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
                         <li v-for="(element, index) in list"
-                            class="m-3 list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between">
+                            class="list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between m-2">
                             <p class="my-auto">{{ element }}</p>
                             <button id="btn" type="button" @click="deleteList(index)" class="btn-close"></button>
                         </li>
