--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-4 d-flex flex-column col-md-6 input-group m-3 w-50 mx-auto">
                     <input v-model="newItem" type="text" class="form-control w-100 m-2"
                         placeholder="Cose da aggiungere...">
-                    <button @click="addList" class="mx-auto btn btn-outline-success w-50"
+                    <button @click="addList" class="mx-auto btn border-2 rounded-2 btn-outline-success w-50"
                         type="button">Aggiungi</button>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-5">
