Add other style

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </h2>
                     <ul class="list-group">
                         <li v-for="(element, index) in list"
-                            class="list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between m-2">
+                            class="list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
                             <p class="my-auto">{{ element }}</p>
                             <button type="button" @click="deleteList(index)" class="btn-close"></button>
                         </li>
