--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </header>
         <main class="container">
             <div class="row flex-column">
-                <div class="col-4 d-flex flex-column col-md-6 input-group m-3 w-50 mx-auto">
-                    <input v-model="newItem" type="text" class="form-control w-100 m-2"
+                <div class="col-4 d-flex flex-column col-md-6 input-group m-3 w-75 mx-auto">
+                    <input v-model="newItem" type="text" class="form-control mx-auto w-50 m-2 border rounded-3"
                         placeholder="Cose da aggiungere..." style="min-width: 150px;">
-                    <button id="btn" @click="addList" class="mx-auto btn border-2 rounded-2 btn-outline-success w-50"
+                    <button id="btn" @click="addList" class="mx-auto w-25 btn border-2 rounded-2 btn-outline-success"
                         type="button" style="min-width: 100px;">Aggiungi</button>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-5">
