--- a/index.html
+++ b/index.html
@@ -27,13 +27,25 @@
         </header>
         <main class="container">
             <div class="row flex-column">
-                <div class="col-4 d-flex flex-column col-md-6 input-group m-3 w-75 mx-auto">
-                    <input v-model="newItem" type="text" class="form-control mx-auto w-50 m-2 border rounded-3"
-                        placeholder="Cose da aggiungere..." style="min-width: 150px;">
-                    <button id="btn" @click="addList" class="mx-auto w-25 btn border-2 rounded-2 btn-outline-success"
-                        type="button" style="min-width: 100px;">Aggiungi</button>
+                <div class="col-4 d-flex flex-column m-2 w-75 mx-auto">
+                    <div v-if="isView" class="input-group d-flex flex-column mx-auto">
+                        <input v-model="newItem" @keyup.enter="addList" type="text"
+                            class="form-control border rounded-3 mx-auto w-75" placeholder="Cose da aggiungere..." />
+                        <div class="tool mx-auto my-2">
+                            <button @click="toggleInput" class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-undo"></i>
+                            </button>
+                            <button @click="addList" class="btn btn-outline-secondary" type="button">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="tool-2 mx-auto" v-if="!isView">
+                        <button id="btn" @click="toggleInput" class="w-25 btn border-2 rounded-2 btn-outline-success"
+                            type="button" style="min-width: 100px;">Aggiungi</button>
+                    </div>
                 </div>
-                <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-5">
+                <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-3">
                     <h2 v-if="!list.length" class="text-center text-danger my-auto">La Lista è vuota!</h2>
                     <h2 v-else-if="list.length === 10" class="text-center text-success m-3">La Lista è completa!
                     </h2>
