--- a/index.html
+++ b/index.html
@@ -28,26 +28,34 @@
         <main class="container">
             <div class="row flex-column">
                 <div class="col-4 d-flex flex-column m-2 w-75 mx-auto">
-                    <div v-if="isView" class="input-group d-flex flex-column mx-auto">
+                    <div v-if="isViewAdd" class="input-group d-flex flex-column mx-auto">
                         <input v-model="newItem" @keyup.enter="addList" type="text"
-                            class="form-control border rounded-3 mx-auto w-75" placeholder="Cose da aggiungere..." />
-                        <div class="tool mx-auto my-2">
-                            <button @click="toggleInput" class="btn btn-outline-secondary" type="button">
-                                <i class="fas fa-undo"></i>
+                            class="form-control border rounded-3 mx-auto w-50" placeholder="Cose da aggiungere..."
+                            style="min-width: 180px;" />
+                        <div class="mx-auto my-2">
+                            <button @click="toggleInput" class="btn btn-outline-dark" type="button">
+                                <i class="fas fa-undo text-danger"></i>
                             </button>
-                            <button @click="addList" class="btn btn-outline-secondary" type="button">
-                                <i class="fas fa-search"></i>
+                            <button @click="addList" class="btn btn-outline-dark" type="button">
+                                <i class="fas fa-plus-circle text-success"></i>
                             </button>
                         </div>
+                        <!--                         <input v-if="isViewSearch" type="text" class="form-control border rounded-3 mx-auto w-50"
+                            placeholder="Cerca..." style="min-width: 180px;" /> -->
                     </div>
-                    <div class="tool-2 mx-auto" v-if="!isView">
-                        <button id="btn" @click="toggleInput" class="w-25 btn border-2 rounded-2 btn-outline-success"
+                    <div v-else class="mx-auto">
+                        <button @click="toggleInput" class="w-25 btn border-2 rounded-2 btn-outline-success"
                             type="button" style="min-width: 100px;">Aggiungi</button>
                     </div>
+                    <div class="mx-auto">
+                        <button @click="toggleSearch" class="w-25 btn border-2 rounded-2 btn-outline-info" type="button"
+                            style="min-width: 100px;">Cerca</button>
+                    </div>
                 </div>
-                <div class="col-8 col-md-6 mx-auto border border-2 border-info shadow p-3">
+                <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
+                    <h3 class="text-white">Totale: {{ list.length }}</h3>
                     <h2 v-if="!list.length" class="text-center text-danger my-auto">La Lista è vuota!</h2>
-                    <h2 v-else-if="list.length === 10" class="text-center text-success m-3">La Lista è completa!
+                    <h2 v-else-if="list.length === 10" class="text-center text-danger m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
                         <li v-for="(element, index) in list"
@@ -61,7 +69,7 @@
         </main>
         <footer class="container">
             <div class="row mt-5">
-                <div class="col-8 mx-auto text-center d-flex justify-content-center">
+                <div class="col-8 mx-auto text-center d-flex justify-content-center text-white">
                     <div class="box-icon m-3">
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
