--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main class="container">
             <div class="row flex-column">
-                <div class="col-4 d-flex flex-column m-2 w-75 mx-auto">
+                <div class="col-4 d-flex flex m-2 w-75 mx-auto justify-content-center">
                     <div v-if="isViewAdd" class="input-group d-flex flex-column mx-auto">
                         <input v-model="newItem" @keyup.enter="addList" type="text"
                             class="form-control border rounded-3 mx-auto w-50" placeholder="Cose da aggiungere..."
@@ -40,16 +40,23 @@
                                 <i class="fas fa-plus-circle text-success"></i>
                             </button>
                         </div>
-                        <!--                         <input v-if="isViewSearch" type="text" class="form-control border rounded-3 mx-auto w-50"
-                            placeholder="Cerca..." style="min-width: 180px;" /> -->
                     </div>
-                    <div v-else class="mx-auto">
-                        <button @click="toggleInput" class="w-25 btn border-2 rounded-2 btn-outline-success"
-                            type="button" style="min-width: 100px;">Aggiungi</button>
+                    <div v-else>
+                        <button v-if="!isViewSearch" @click="toggleInput"
+                            class="w-25 btn border-2 rounded-2 btn-outline-success mx-2" type="button"
+                            style="min-width: 100px;">Aggiungi</button>
                     </div>
-                    <div class="mx-auto">
-                        <button @click="toggleSearch" class="w-25 btn border-2 rounded-2 btn-outline-info" type="button"
-                            style="min-width: 100px;">Cerca</button>
+                    <div>
+                        <button v-if="!isViewAdd && !isViewSearch" @click="toggleSearch"
+                            class="w-25 btn border-2 rounded-2 btn-outline-info mx-2" type="button"
+                            style="min-width: 80px;">Cerca</button>
+                    </div>
+                    <div v-if="isViewSearch" class="text-center">
+                        <input type="text" class="form-control border rounded-3 mx-auto" placeholder="Cerca..."
+                            style="min-width: 180px;" />
+                        <button @click="toggleSearch" class="btn btn-outline-dark mt-2" type="button">
+                            <i class="fas fa-undo text-danger"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
