--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </div>
         </header>
         <main class="container">
-            <div class="row flex-column">
-                <div class="col-4 d-flex flex m-2 w-75 mx-auto justify-content-center">
-                    <div v-if="isViewAdd" class="input-group d-flex flex-column mx-auto">
+            <div class="row flex-column text-center">
+                <div class="col-4 d-flex flex mx-auto m-2 justify-content-center">
+                    <div v-if="isViewAdd">
                         <input v-model="newItem" @keyup.enter="addList" type="text"
-                            class="form-control border rounded-3 mx-auto w-50" placeholder="Cose da aggiungere..."
+                            class="form-control border rounded-3" placeholder="Cose da aggiungere..."
                             style="min-width: 180px;" />
-                        <div class="mx-auto my-2">
+                        <div class="my-2">
                             <button @click="toggleInput" class="btn btn-outline-dark" type="button">
                                 <i class="fas fa-undo text-danger"></i>
                             </button>
@@ -43,16 +43,21 @@
                     </div>
                     <div v-else>
                         <button v-if="!isViewSearch" @click="toggleInput"
-                            class="w-25 btn border-2 rounded-2 btn-outline-success mx-2" type="button"
+                            class="btn border-2 rounded-2 btn-outline-success mx-2" type="button"
                             style="min-width: 100px;">Aggiungi</button>
                     </div>
                     <div>
                         <button v-if="!isViewAdd && !isViewSearch" @click="toggleSearch"
-                            class="w-25 btn border-2 rounded-2 btn-outline-info mx-2" type="button"
+                            class="btn border-2 rounded-2 btn-outline-info mx-2" type="button"
                             style="min-width: 80px;">Cerca</button>
                     </div>
-                    <div v-if="isViewSearch" class="text-center">
-                        <input type="text" class="form-control border rounded-3 mx-auto" placeholder="Cerca..."
+                    <div>
+                        <button v-if="!isViewAdd && !isViewSearch" @click="resetList"
+                            class="btn border-2 rounded-2 btn-outline-danger mx-2" type="button"
+                            style="min-width: 80px;">Reset</button>
+                    </div>
+                    <div v-if="isViewSearch">
+                        <input type="text" class="form-control border rounded-3" placeholder="Cerca..."
                             style="min-width: 180px;" />
                         <button @click="toggleSearch" class="btn btn-outline-dark mt-2" type="button">
                             <i class="fas fa-undo text-danger"></i>
@@ -61,12 +66,12 @@
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
                     <h3 class="text-white">Totale: {{ list.length }}</h3>
-                    <h2 v-if="!list.length" class="text-center text-danger my-auto">La Lista è vuota!</h2>
-                    <h2 v-else-if="list.length === 10" class="text-center text-danger m-3">La Lista è completa!
+                    <h2 v-if="!list.length" class="text-danger my-auto">La Lista è vuota!</h2>
+                    <h2 v-else-if="list.length === 10" class="text-danger m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
                         <li v-for="(element, index) in list"
-                            class="list-group-item d-flex flex-column-reverse align-items-center text-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
+                            class="list-group-item d-flex flex-column-reverse align-items-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
                             <p class="my-auto">{{ element }}</p>
                             <button type="button" @click="deleteList(index)" class="btn-close"></button>
                         </li>
