--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
 
-    <div id="app">
-        <header class="container-fluid bg-header mb-5">
+    <div id="app" class="vh-100" :class="backgroundColor">
+        <header class="container-fluid bg-header mb-3">
             <div class="row">
                 <div class="col text-center">
                     <img src="./img/logo.png" alt="Logo">
@@ -27,6 +27,11 @@
         </header>
         <main class="container">
             <div class="row flex-column text-center">
+                <div class="col-6 mx-auto mb-5">
+                    <div class="text-center">
+                        <button type="button" @click="darkMode" class="btn-secondary">{{ mode }}</button>
+                    </div>
+                </div>
                 <div class="col-4 d-flex flex mx-auto m-2 justify-content-center">
                     <div v-if="isViewAdd">
                         <input v-model="newItem" @keyup.enter="addList" type="text"
@@ -65,7 +70,7 @@
                     </div>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
-                    <h3 class="text-white">Totale: {{ list.length }}</h3>
+                    <h3 :class="defaultColor">Totale: {{ list.length }}</h3>
                     <h2 v-if="reset && !list.length" class="text-danger">Reset Successfully!</h2>
                     <h2 v-if="!list.length" class="text-info my-auto">La Lista è vuota!</h2>
                     <h2 v-else-if="list.length === 10" class="text-danger m-3">La Lista è completa!
@@ -82,7 +87,7 @@
         </main>
         <footer class="container">
             <div class="row mt-5">
-                <div class="col-8 mx-auto text-center d-flex justify-content-center text-white">
+                <div class="col-8 mx-auto text-center d-flex justify-content-center" :class="defaultColor">
                     <div class="box-icon m-3">
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
