--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="row flex-column text-center">
                 <div class="col-6 mx-auto mb-5">
                     <div class="text-center">
-                        <button type="button" @click="darkMode" class="btn-secondary">{{ mode }}</button>
+                        <button type="button" @click="darkMode" class="btn btn-sm btn-secondary">{{ mode }}</button>
                     </div>
                 </div>
                 <div class="col-4 d-flex flex mx-auto m-2 justify-content-center">
