--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                             style="min-width: 80px;">Reset</button>
                     </div>
                     <div v-if="isViewSearch">
-                        <input type="text" class="form-control border rounded-3" placeholder="Cerca..."
-                            style="min-width: 180px;" />
+                        <input v-model="searchItem" type="text" class="form-control border rounded-3"
+                            placeholder="Cerca..." style="min-width: 180px;" />
                         <button @click="toggleSearch" class="btn btn-outline-dark mt-2" type="button">
                             <i class="fas fa-undo text-danger"></i>
                         </button>
                     </div>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
-                    <h3 :class="defaultColor">Totale: {{ list.length }}</h3>
+                    <h3 :class="defaultColor">Total list: {{ list.length }}</h3>
                     <h2 v-if="reset && !list.length" class="text-danger">Reset Successfully!</h2>
                     <h2 v-if="!list.length" class="text-info my-auto">La Lista è vuota!</h2>
                     <h2 v-else-if="list.length === 10" class="text-danger m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
-                        <li v-for="(element, index) in list"
+                        <li v-for="(element, index) in list" v-if="showItem(element)"
                             class="list-group-item d-flex flex-column-reverse align-items-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
                             <p class="my-auto">{{ element }}</p>
                             <button type="button" @click="deleteList(index)" class="btn-close"></button>
