Set other functions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <h2 v-else-if="list.length === 10" class="text-danger m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
-                        <li v-for="(element, index) in list" v-if="showItem(element)"
+                        <li v-for="(element, index) in list" v-if="showItem(element)" @click="toggleDec(index)"
+                            :class="decoration"
                             class="list-group-item d-flex flex-column-reverse align-items-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
                             <p class="my-auto">{{ element }}</p>
                             <button type="button" @click="deleteList(index)" class="btn-close"></button>
