--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                     </div>
                 </div>
                 <div class="col-8 col-md-6 mx-auto border border-2 border-secondary shadow p-3">
+                    <div class="col-6 mx-auto m-3 d-flex justify-content-around">
+                        <button type="button" @click="allDone" class="m-1 btn btn-warning btn-sm">All Done</button>
+                        <button type="button" @click="allNoDone" class="m-1 btn btn-warning btn-sm">To Do</button>
+                    </div>
                     <h3 :class="defaultColor">Total list: {{ list.length }}</h3>
                     <h2 v-if="reset && !list.length" class="text-danger">Reset Successfully!</h2>
                     <h2 v-if="!list.length" class="text-info my-auto">La Lista è vuota!</h2>
