--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <div id="app" class="vh-100" :class="backgroundColor">
+    <div id="app" class="vh-100 overflow-auto" :class="backgroundColor">
         <header class="container-fluid bg-header mb-3">
             <div class="row">
                 <div class="col text-center">
