--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
                     <h2 v-else-if="list.length === 10" class="text-danger m-3">La Lista è completa!
                     </h2>
                     <ul class="list-group">
-                        <li v-for="(element, index) in list" v-if="showItem(element.text)" @click="toggleDone(index)"
-                            class="list-group-item d-flex flex-column-reverse align-items-center d-md-flex flex-md-row justify-content-md-between mt-2 border rounded-3">
-                            <p :class="isDone(index) ? 'text-decoration-line-through' : '' " class="my-auto">{{
-                                element.text }}</p>
+                        <li v-for="(element, index) in list" v-if="showItem(element.text)"
+                            class="list-group-item d-flex mt-2 border rounded-3" style="min-width: 180px;">
+                            <div class="icon-list d-flex w-100" @click="toggleDone(index)">
+                                <i class="far"
+                                    :class="isDone(index) ? 'fa-check-circle fa-2x text-success' : 'fa-check-circle fa-2x'"></i>
+                                <p :class="isDone(index) ? 'bg-warning p-1 rounded-1' : '' "
+                                    class="my-auto fw-bold mx-1">{{
+                                    element.text }}</p>
+                            </div>
                             <button type="button" @click="deleteList(index)" class="btn-close"></button>
                         </li>
                     </ul>
