--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div class="row flex-column text-center">
                 <div class="col-6 mx-auto mb-5">
                     <div class="text-center">
-                        <button type="button" @click="darkMode" class="btn btn-sm btn-secondary">{{ mode }}</button>
+                        <button type="button" @click="darkMode" class="btn btn-sm btn-secondary">{{ mode }}
+                            <i :class="modeIcon ? 'far fa-lightbulb text-warning' : 'far fa-moon text-warning'"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="col-4 d-flex flex mx-auto m-2 justify-content-center">
